Fix el-mgmt error text display on mobile; make other minor fixes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -346,6 +346,11 @@ footer {
     padding-right: 15px;
 }
 
+.el-error {
+    float: left;
+    margin: 8px;
+}
+
 .el-field {
     margin-bottom: 3px;
     padding-left: 3px;
